# python-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  authentication.md  usage_guide.md  versioning_and_compatibility.md
examples/: authorization_code_example.py  basic_usage_example.py  client_credentials_example.py
openapi_data/: chat.json  core.json  order_processing.json  wallet.json
src/basalam_sdk/: __init__.py  auth.py  basalam_client.py  base_client.py  config.py  version.py
src/basalam_sdk/chat/: __init__.py  client.py  models.py
src/basalam_sdk/core/: __init__.py  client.py  models.py
src/basalam_sdk/order/: __init__.py  client.py  models.py
src/basalam_sdk/order_processing/: __init__.py  client.py  models.py
src/basalam_sdk/search/: client.py  models.py
src/basalam_sdk/upload/: __init__.py  client.py  models.py
src/basalam_sdk/wallet/: __init__.py  client.py  models.py
src/basalam_sdk/webhook/: __init__.py  client.py  models.py
tests/: test_chat_client.py
